fix(auth): changed back app.go
