# backend/docs/swagger.json
@@ -64,14 +64,10 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
                                             "type": "array",
                                             "items": {
                                                 "$ref": "#/definitions/validator.ResponseError"
                                             }
-=======
-                                            "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -143,7 +139,10 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created"
+                        "description": "Created",
+                        "schema": {
+                            "type": "object"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -162,14 +161,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
                                             "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -187,11 +179,7 @@
         },
         "/auth/token/refresh": {
             "post": {
-<<<<<<< HEAD
-                "description": "Only works if refresh token is placed in cookies (login endpoint puts it there)",
-=======
                 "description": "Refresh token should be in cookies (login put it there)",
->>>>>>> master
                 "consumes": [
                     "application/json"
                 ],
@@ -310,27 +298,6 @@
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/model.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
                         }
                     },
                     "500": {
@@ -609,14 +576,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
                                             "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -777,14 +737,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
                                             "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -935,14 +888,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
                                             "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -1026,14 +972,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
                                             "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -1109,14 +1048,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
                                             "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -1178,13 +1110,16 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/model.Response"
+                                    "$ref": "#/definitions/comment.GetAllCommentsResponse"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/comment.GetAllCommentsResponse"
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/comment.Comment"
+                                            }
                                         }
                                     }
                                 }
@@ -1201,31 +1136,6 @@
                         "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/model.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
-                                            "$ref": "#/definitions/validator.Response"
->>>>>>> master
-                                        }
-                                    }
-                                }
-                            ]
                         }
                     },
                     "500": {
@@ -1310,31 +1220,6 @@
                             "$ref": "#/definitions/model.Response"
                         }
                     },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/model.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
-                                            "$ref": "#/definitions/validator.Response"
->>>>>>> master
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -1404,31 +1289,6 @@
                         "description": "Forbidden",
                         "schema": {
                             "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/model.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
-                                            "$ref": "#/definitions/validator.Response"
->>>>>>> master
-                                        }
-                                    }
-                                }
-                            ]
                         }
                     },
                     "500": {
@@ -1525,31 +1385,6 @@
                         "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/model.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
-                                            "$ref": "#/definitions/validator.Response"
->>>>>>> master
-                                        }
-                                    }
-                                }
-                            ]
                         }
                     },
                     "500": {
@@ -1662,27 +1497,6 @@
                             "$ref": "#/definitions/model.Response"
                         }
                     },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/model.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -1786,14 +1600,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
                                             "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -1881,14 +1688,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
                                             "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -1953,14 +1753,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
                                             "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -2046,14 +1839,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-<<<<<<< HEAD
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/validator.ResponseError"
-                                            }
-=======
                                             "$ref": "#/definitions/validator.Response"
->>>>>>> master
                                         }
                                     }
                                 }
@@ -2524,8 +2310,6 @@
                 }
             }
         },
-<<<<<<< HEAD
-=======
         "validator.Response": {
             "type": "object",
             "properties": {
@@ -2540,7 +2324,6 @@
                 }
             }
         },
->>>>>>> master
         "validator.ResponseError": {
             "type": "object",
             "properties": {
@@ -2549,12 +2332,8 @@
                     "example": "username"
                 },
                 "param": {
-<<<<<<< HEAD
-                    "type": "string"
-=======
                     "type": "string",
                     "example": ""
->>>>>>> master
                 },
                 "tag": {
                     "type": "string",
@@ -2566,11 +2345,7 @@
     },
     "securityDefinitions": {
         "ApiKeyAuthBasic": {
-<<<<<<< HEAD
-            "description": "Put token in format \"Bearer your_token\"",
-=======
             "description": "Authorization token in the format \"Bearer your_token\"",
->>>>>>> master
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
